testsuite/tests/typecheck/should_fail/tcfail035.stderr

tcfail035.hs:6:10: error: [GHC-59692]
    Duplicate instance declarations:
      instance Num NUM -- Defined at tcfail035.hs:6:10
      instance Num NUM -- Defined at tcfail035.hs:7:10
